@startuml

title __CLOUDSERVICE's Class Diagram__\n

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient {
        - connection : HttpURLConnection
        + initConnection()
        + sendRequest()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.StudentAnswersReply {
        - success : boolean
        + isSuccess()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.StudentGetQuiz {
        ~ quizName : String
        + StudentGetQuiz()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.StudentQuizReply {
        - quizData : String
        - success : boolean
        + getQuizData()
        + isSuccess()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.StudentUploadAnswers {
        ~ answers : String
        ~ quizName : String
        ~ studentName : String
        + StudentUploadAnswers()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.TeacherAnswersReply {
        - answers : String
        - key : String
        - success : boolean
        + getAnswers()
        + getKey()
        + isSuccess()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.TeacherGetAnswers {
        ~ quizName : String
        ~ studentName : String
        ~ TeacherGetAnswers()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.TeacherQuizReply {
        - success : boolean
        + isSuccess()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.LambdaClient.TeacherUploadQuiz {
        ~ quizData : String
        ~ quizDest : String
        ~ quizName : String
        ~ remove : boolean
        ~ TeacherUploadQuiz()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.ServiceStudentController {
        ~ serviceEndpoint : String
        + ServiceStudentController()
        + fetchQuizJson()
        + sendQuizJson()
        + setupApplication()
    }
  }
  

  namespace com.kyle.cloudservice {
    class com.kyle.cloudservice.ServiceTeacherController {
        ~ serviceEndpoint : String
        + ServiceTeacherController()
        + browseAnswerFile()
        + browseKeyFile()
        + getAnswersJson()
        + pushQuizJson()
        + setupApplication()
        ~ removeQuiz()
    }
  }
  

  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.StudentAnswersReply
  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.StudentGetQuiz
  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.StudentQuizReply
  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.StudentUploadAnswers
  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.TeacherAnswersReply
  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.TeacherGetAnswers
  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.TeacherQuizReply
  com.kyle.cloudservice.LambdaClient +-down- com.kyle.cloudservice.LambdaClient.TeacherUploadQuiz
  com.kyle.cloudservice.ServiceStudentController -up-|> com.kyle.quizclient.StudentController
  com.kyle.cloudservice.ServiceTeacherController -up-|> com.kyle.quizclient.TeacherController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
